# polymorphism_bench

./: CMakeLists.txt  README.md  bar_plot.tex  conanfile.txt  generate_vtable.hpp  main.cpp  rust_traits.hpp  task_ref.hpp  types.hpp
scoped_timer/: CMakeLists.txt
scoped_timer/src/: scoped_timer.cpp  scoped_timer.hpp
